Fix projects section text and button align

--- a/src/layout/main/main.layout.scss
+++ b/src/layout/main/main.layout.scss
@@ -10,6 +10,7 @@
     .section__content {
       display: flex;
       justify-content: space-between;
+      align-items: center;
       p {
         width: 25rem;
         font-size: 1.125rem;
